--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@oruga-ui/oruga-next": "^0.7.0",
+    "@vueuse/core": "^10.4.1",
     "konva": "^9.2.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
