--- a/apps/eidtor/tsconfig.node.json
+++ b/apps/eidtor/tsconfig.node.json
@@ -6,7 +6,7 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*"
-  ],
+, "vitest.config.ts", "vite.config.ts"  ],
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
