--- a/packages/huajs/package.json
+++ b/packages/huajs/package.json
@@ -2,7 +2,7 @@
   "name": "huajs-core",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "miniplex": "^2.0.0"
+    "miniplex": "^2.0.0",
+    "konva": "^9.2.1"
   }
 }
