--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "huajs-core",
+  "name": "huajs-utils",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "miniplex": "^2.0.0",
-    "konva": "^9.2.1"
-  }
+  "license": "ISC"
 }
