--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "konva": "^9.2.1",
     "mitt": "^3.0.1",
     "pinia": "^2.1.6",
+    "pinia-orm": "^1.7.2",
     "vue": "^3.3.4",
     "vue-konva": "^3.0.2",
     "vue-router": "^4.2.4"
