--- a/apps/eidtor/tsconfig.app.json
+++ b/apps/eidtor/tsconfig.app.json
@@ -7,6 +7,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-    }
+    },
+
+    "useDefineForClassFields": true,  // Default true if target is "ES2022" or "ESNext"
+    "experimentalDecorators": true,
   }
 }
