--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "huajs-core",
+  "name": "huajs-render",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "huajs-utils": "workspace:*"
+    "huajs-core": "workspace:*"
   }
 }
