feat: huajs-common

--- a/apps/eidtor/package.json
+++ b/apps/eidtor/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "huajs-core": "workspace:*",
-    "huajs-utils": "workspace:*"
+    "huajs-utils": "workspace:*",
+    "tsconfig": "workspace:*"
   },
   "keywords": [],
   "author": "",
