--- a/apps/eidtor/tsconfig.json
+++ b/apps/eidtor/tsconfig.json
@@ -1,14 +1,14 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
+  "extends": "tsconfig/tsconfig.vue.json",
+  "exclude": ["dist", "build", "node_modules"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.vitest.json" }],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
     },
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.vitest.json"
-    }
-  ]
+    "useDefineForClassFields": true,  // Default true if target is "ES2022" or "ESNext"
+    "experimentalDecorators": true,
+  },
 }
