--- a/apps/eidtor/tsconfig.vitest.json
+++ b/apps/eidtor/tsconfig.vitest.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.app.json",
+  "extends": "tsconfig/tsconfig.vue.json",
   "exclude": [],
   "compilerOptions": {
     "composite": true,
