fix: withAll().get()

--- a/apps/eidtor/package.json
+++ b/apps/eidtor/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "huajs-core": "workspace:*",
     "huajs-utils": "workspace:*",
+    "huajs-repo": "workspace:*",
     "tsconfig": "workspace:*"
   },
   "keywords": [],
