--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "huajs-core": "workspace:*",
+    "huajs-repo": "workspace:*",
     "tsconfig": "workspace:*",
     "huajs-common": "workspace:*"
   }
