feat: change command

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,7 @@
     "huajs-utils": "workspace:*",
     "huajs-render": "workspace:*",
     "huajs-common": "workspace:*",
+    "huajs-repo": "workspace:*",
     "tsconfig": "workspace:*"
   }
 }
