--- a/packages/repo/tsconfig.json
+++ b/packages/repo/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "tsconfig/tsconfig.base.json",
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@huajs-render/*": ["src/*"]
+    },
     "useDefineForClassFields": true,  // Default true if target is "ES2022" or "ESNext"
     "experimentalDecorators": true,
   },
