--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "~5.2.0",
     "unocss": "^0.56.4",
     "vite": "^4.4.9",
+    "vite-plugin-dts": "^3.6.2",
     "vitest": "^0.34.4",
     "vue-tsc": "^1.8.11"
   }
