--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@vueuse/core": "^10.4.1",
     "dexie": "^3.2.4",
     "konva": "^9.2.1",
+    "localforage": "^1.10.0",
     "mitt": "^3.0.1",
     "pinia": "^2.1.6",
     "pinia-orm": "^1.7.2",
+    "pinia-plugin-persistedstate-2": "^2.0.14",
     "vue": "^3.3.4",
     "vue-konva": "^3.0.2",
     "vue-router": "^4.2.4"
