--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "huajs",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@oruga-ui/oruga-next": "^0.7.0",
     "@vueuse/core": "^10.4.1",
