--- a/packages/render/tsconfig.json
+++ b/packages/render/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@huajs-render/*": ["src/*"]
+      "@zixian-vue/render/*": ["src/*"]
     },
   },
 }
