--- a/packages/repo/tsconfig.json
+++ b/packages/repo/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@huajs-render/*": ["src/*"]
+      "@zixian-vue/render/*": ["src/*"]
     },
     "useDefineForClassFields": true,  // Default true if target is "ES2022" or "ESNext"
     "experimentalDecorators": true,
