--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "player",
+  "name": "zixian-player",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "files": ["dist"],
+  "main": "./dist/zixian-player.umd.cjs",
+  "module": "./dist/zixian-player.js",
+  "types": "./dist/main.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
